# fastapi-template

./: .env.example  MAKEFILE_REFERENCE.md  Makefile  README.md  api-examples.http  pyproject.toml  yoyo.ini
app/: main.py
app/config/: database.py  log_config.py  migrations.py  settings.py  telemetry.py  uvicorn_config.py
app/controllers/: user_controller.py
app/core/: dependencies.py  exceptions.py  security.py
app/middleware/: __init__.py  trace_middleware.py
app/models/: base.py  user.py
app/repositories/: base.py  user_repository.py
app/schemas/: user.py
app/utils/: helpers.py
app/views/api/v1/: users.py
migrations/: 2025060623-create_users_table.rollback.sql  2025060623-create_users_table.sql  README.md
scripts/: create_database.py  manage_migrations.py  migrate.sh  setup_database.py
